--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,13 +1,11 @@
 @()(implicit request: Request[_])
 
-@main("REST API Example") {
-  <p>
-    Example text.
-  </p>
+@main("REST API") {
+  <div class="header">
+    <h1 class="header-title">REST API</h1>
+  </div>
 
   <ul>
     <li><a href="/posts">/posts</a></li>
-    <li><a href="/posts/1">/posts/1</a></li>
-    <li><a href="/posts/2">/posts/2</a></li>
   </ul>
 }
