--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,7 @@
   <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="navbar-header">
-        <a class="navbar-brand" href="@routes.HomeController.index">REST API Example</a>
+        <a class="navbar-brand" href="@routes.HomeController.index">REST API</a>
       </div>
     </div>
 
