Use a post controller

--- a/app/views/posts/index.scala.html
+++ b/app/views/posts/index.scala.html
@@ -1,4 +1,4 @@
-@(posts: Iterable[post.Post], form: Form[post.PostFormInput])(implicit request: post.PostRequest[_])
+@(posts: Iterable[post.PostResource], form: Form[post.PostFormInput])(implicit request: post.PostRequest[_])
 
 @main("Posts") {
 
