--- a/app/views/posts/show.scala.html
+++ b/app/views/posts/show.scala.html
@@ -1,4 +1,4 @@
-@(p: post.Post)(implicit request: post.PostRequest[_])
+@(p: post.PostResource)(implicit request: post.PostRequest[_])
 
 @main("Posts") {
 
